# bow

./: .gitignore  AGENTS.md  README.md  install.sh  pyproject.toml  uninstall.sh
.specify/memory/: constitution.md
charts/bow-postgresql/: pyproject.toml
charts/bow-postgresql/src/bow_postgresql/: __init__.py  defaults.yaml
charts/bow-redis/: pyproject.toml
charts/bow-redis/src/bow_redis/: __init__.py  defaults.yaml
charts/bow-redmine/: pyproject.toml
charts/bow-redmine/src/bow_redmine/: __init__.py  defaults.yaml
examples/kubernetes/tenants/t1/postgresql/: values.prod.yaml  values.staging.yaml  values.yaml
examples/kubernetes/tenants/t2/redis/: values.prod.yaml  values.yaml
examples/kubernetes/tenants/t3/redmine/: stack.yaml  values.prod.yaml  values.yaml
src/bow/: __init__.py  utils.py
src/bow/chart/: __init__.py  base.py  dependency.py  registry.py  values.py
src/bow/cli/: __init__.py  env_cmd.py  inspect_cmd.py  install_cmd.py  list_cmd.py  lock_cmd.py  pull_cmd.py  push_cmd.py  registry_cmd.py  status_cmd.py  template.py  uninstall_cmd.py  up.py
src/bow/core/: manifest.py  resource.py  resources.py  stack.py
src/bow/oci/: __init__.py  client.py  config.py  env.py
src/bow/stack/: __init__.py  engine.py  merger.py  parser.py  refs.py
src/bow/workspace/: __init__.py  lock.py  resolver.py  stage.py
tests/: test_chart.py  test_charts.py  test_cli.py  test_core.py  test_oci.py  test_stack.py  test_workspace.py
