[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bow-redmine"
version = "5.1.0"
description = "Redmine chart for bow"
requires-python = ">=3.11"
dependencies = [
    "bow-cli>=0.1.0",
    "bow-postgresql>=16.0.0",
]

[project.entry-points."bow.charts"]
redmine = "bow_redmine:RedmineChart"

[tool.hatch.build.targets.wheel]
packages = ["src/bow_redmine"]
